# Biodiversity-Monitoring-System

./: .gitignore  DISCLAIMER.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
configs/: data.yaml  model.yaml
data/processed/: .gitkeep
demo/: app.py
notebooks/: exploration.ipynb
scripts/: train.py
src/data/: __init__.py
src/eval/: evaluation.py
src/models/: __init__.py
tests/: test_biodiversity.py
